<resources>
    <string name="app_name">Formulario</string>
    <string name="nombre">Nombre completo</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="descripcion">Descripcion del contacto</string>
    <string name="siguiente">Siguiente</string>
    <string name="fecha">Fecha de nacimiento</string>
    <string name="titulo">Confirmar Datos</string>
    <string name="editarD">Editar datos</string>
</resources>
